Fix deck, hand, z-index on hover

--- a/static/css/final_cards.css
+++ b/static/css/final_cards.css
@@ -7,8 +7,8 @@ body {
 }
 
 .card {
-    width: 420px;
-    height: 680px;
+    width: 130px;
+    height: 285px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -29,8 +29,10 @@ body {
 }
 
 .card-wrapper {
-    width: 420px;
-    height: 680px;
+    position: relative;
+    z-index: 1;
+    width: 130px;
+    height: 185px;
     perspective: 1200px;
     cursor: pointer;
     transform-style: preserve-3d;
@@ -64,6 +66,7 @@ body {
 .card-wrapper:hover {
     transform: translateY(-10px) scale(1.2);
     transition: transform 0.2s ease;
+    z-index: 9999 !important;
 }
 
 .face {
@@ -78,7 +81,7 @@ body {
 
 .card-wrapper.flipped .card-inner {
     transform: rotateY(180deg) !important;
-    transition: transform 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94);;
+    transition: transform 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94);
 }
 
 .card-wrapper.flipped .card {
@@ -113,9 +116,9 @@ body {
 .back {
     position: absolute;
     inset: 0;
-    display: block;
-    justify-content: center;
-    align-items: center;
+    /* display: block; */
+    /* justify-content: center; */
+    /* align-items: center; */
     border-radius: 15px;
     /* sempre common */
 }
@@ -124,154 +127,6 @@ body {
     content: "";
     position: absolute;
     inset: 0;
-}
-
-.back-img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    display: block;
-}
-
-.card-content {
-    padding: 16px;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    background-color: #0a0a0a;
-    background-image: url("/static/src/misc/Symbol.png");
-    background-size: 400px 500px;
-    background-position-x: center;
-    background-position-y: center;
-    background-repeat: no-repeat;
-    overflow: hidden;
-}
-
-.card-content::before {
-    content: '';
-    position: absolute;
-    inset: 0;
-    background: inherit;
-    background-blend-mode: multiply;
-    opacity: 0.7;
-    z-index: 1;
-    pointer-events: none;
-}
-
-.card-content > * {
-    position: relative;
-    z-index: 2;
-}
-
-.name-banner {
-    /* Dimensioni del ritaglio basate sulle coordinate fornite */
-    width: 100%;
-    /* Si adatta al contenitore della carta */
-    height: 45px;
-
-    background-repeat: no-repeat;
-
-    /* 
-            Spostiamo l'immagine in alto a sinistra (0,0). 
-            background-size deve essere proporzionato alla larghezza totale 
-            dello sprite originale per mantenere le proporzioni.
-            */
-    background-image: url('/static/src/misc/Name_Banner.png');
-    background-size: 100% 100%;
-
-    /* Centratura del testo */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.ninepatch {
-    /* 1. Definiamo lo spessore visivo del bordo (quello che non deve stretchare) */
-    border-top: 20px solid transparent;
-    border-bottom: 20px solid transparent;
-    border-left: 20px solid transparent;
-    border-right: 20px solid transparent;
-
-    /* 2. Applichiamo la "Nine-Patch" */
-    border-image-source: url('/static/src/misc/NinePatchRect.png');
-
-    /* 3. Lo 'slice': indica a che distanza dai bordi tagliare (in pixel nell'immagine originale) */
-    /* Se i tuoi angoli decorati sono grandi 40px, metti 40. 
-            Il comando 'fill' serve a mantenere visibile anche il centro del rettangolo */
-    border-image-slice: 40 fill;
-
-    /* 4. Come gestire i segmenti centrali (gli spigoli): 
-            'repeat' o 'round' (ripete senza tagliare) invece di stretch */
-    border-image-repeat: repeat;
-
-    /* Layout del testo */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-height: 60px;
-    color: #edd7ab;
-    padding: 10px;
-}
-
-.ninepatchshadow {
-    /* 1. Definiamo lo spessore visivo del bordo (quello che non deve stretchare) */
-    border-top: 20px solid transparent;
-    border-bottom: 20px solid transparent;
-    border-left: 20px solid transparent;
-    border-right: 20px solid transparent;
-
-    /* 2. Applichiamo la "Nine-Patch" */
-    border-image-source: url('/static/src/misc/Shadow.png');
-
-    /* 3. Lo 'slice': indica a che distanza dai bordi tagliare (in pixel nell'immagine originale) */
-    /* Se i tuoi angoli decorati sono grandi 40px, metti 40. 
-            Il comando 'fill' serve a mantenere visibile anche il centro del rettangolo */
-    border-image-slice: 40 fill;
-
-    filter: brightness(150%);
-
-    /* 4. Come gestire i segmenti centrali (gli spigoli): 
-            'repeat' o 'round' (ripete senza tagliare) invece di stretch */
-    border-image-repeat: repeat;
-
-    /* Layout del testo */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-height: 60px;
-    color: #edd7ab;
-    padding: 10px;
-}
-
-.topprpr {
-    width: 100%;
-    height: 35px;
-
-    background-repeat: no-repeat;
-    background-image: url('/static/src/misc/SB_In_Game_02.png');
-    background-position: 0px -30px;
-    background-size: 490px 135px;
-}
-
-.attributes-container {
-    position: absolute;
-    left: -90px;
-    top: 0;
-    width: 80px;
-    height: 100%;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-
-    opacity: 0;
-    transform: translateX(20px);
-    transition: all 0.3s ease;
-
-    pointer-events: none;
-    z-index: 999;
 }
 
 .card-wrapper:hover .attributes-container {
@@ -327,6 +182,18 @@ body {
     z-index: 3;
 }
 
+.card img {
+    box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.4);
+}
+
+.card.front img {
+    box-shadow: none;
+}
+
 #cardContainer {
     padding: 30px;
+}
+
+.deck-card-wrapper * {
+    pointer-events: none !important;
 }
